@startuml
abstract class abstractas.ClaseAbstractaNodo
class Principal.CalculadoraRPN
class concretas.ClaseConcretaCola
class concretas.ClaseConcretaColaHistorial
class concretas.ClaseConcretaPila
class concretas.MetodosGenerales
class concretas.NodoCadena
class concretas.NodoHistorial
class concretas.NodoNumeroDoble
interface interfaces.InterfazCola{
    void agregarElemento(Object object)
    Object extraerElemento()
    int obtenerLongitud()
    boolean estaVacia()
    void imprimir()
}
interface interfaces.InterfazNodo{
    void setSiguiente(Object object)
    Object getSiguiente()
}
interface interfaces.InterfazPila{
    void push(Object object)
    Object pop()
    int obtenerLongitud()
    boolean estaVacia()
    void imprimir()
}
abstractas.ClaseAbstractaNodo --|> interfaces.InterfazNodo : implementa
concretas.ClaseConcretaCola --|> interfaces.InterfazCola : implementa
concretas.ClaseConcretaColaHistorial --|> concretas.ClaseConcretaCola : extiende
concretas.ClaseConcretaPila --|> interfaces.InterfazPila : implementa
concretas.NodoCadena --|> abstractas.ClaseAbstractaNodo : extiende
concretas.NodoHistorial --|> abstractas.ClaseAbstractaNodo : extiende
concretas.NodoNumeroDoble --|> abstractas.ClaseAbstractaNodo : extiende
@enduml